--- a/hello_django/blog/templates/demo_add.html
+++ b/hello_django/blog/templates/demo_add.html
@@ -6,10 +6,11 @@
     <h1>添加新文章</h1>
     <form action="" method="POST"> {% csrf_token %}
         标题<input type="text" autocomplete="off" id="title"
-                 placeholder="请输入标题" name='title'> <br> <br><br>
+                 placeholder="请输入标题" name='title' value="{% block blog_title %}{% endblock %}"> <br> <br><br>
         内容 <textarea name="content" id="content"
-                     placeholder="请输入内容" cols="30" rows="10"></textarea>
+                     placeholder="请输入内容" cols="30" rows="10">{% block blog_content %}{% endblock %}</textarea>
         <button type="submit">发布博客</button>
     </form>
 {% endblock %}
-t
+
+
