--- a/hello_django/blog/templates/demo_detail.html
+++ b/hello_django/blog/templates/demo_detail.html
@@ -3,6 +3,6 @@
     文章详情
 {% endblock %}
 {% block bodyblock %}
-    <h1>文章标题</h1>
-    文章内容
+    <h1>{{ blog.title }}</h1>
+    {{ blog.content }}
 {% endblock %}
